--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: America/Boise
 title: Tray Simpson
 
 tagline: >- # used as the site description in the <meta> tags
-  Software Engineer | Game Dev | Guy who likes to make things
+  Just a guy who likes to make things
 
 description: >- # used by seo meta and the atom feed
   The personal blog site of Tray Simpson, a software developer.
