Adds google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-YVGDH08MVG
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
