--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -8,6 +8,10 @@
   icon: "fab fa-youtube"
   url:  'https://www.youtube.com/@ShiftyTheDev'
 
+- type: cara
+  icon: "fa-solid fa-paintbrush"
+  url:  'https://cara.app/shiftythedev'
+
 - type: linkedin
   icon: 'fab fa-linkedin'
   url:  'https://www.linkedin.com/in/tray-simpson-17114a161/'
